# nsfc-final-report

./: .gitignore  AGENTS.md  README.md  pyproject.toml  uv.toml
.github/workflows/: ci.yml
nsfc_final_report/: __init__.py  cli.py  client.py
scripts/: batch_ocr.py  batch_ocr.sh  ocr_reports.py  uv_tasks.sh
skill/: README.md  SKILL.md
tests/: test_client.py  test_ocr_reports.py
