[project]
name = "nsfc_final_report"
version = "0.1.0"
description = "NSFC final report search and download utilities"

requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.23.0",
    "requests>=2.32.5",
]

[project.scripts]
nsfc-final-report = "nsfc_final_report.cli:main"

[tool.uv.tasks]
# create a venv (idempotent)
venv = "uv venv .venv"

# install project + test deps into the uv-created venv (include coverage tool)
install = "uv add pytest pytest-cov ruff black isort || python -m pip install -r requirements.txt"

# run linters
lint = "ruff check . && black --check . && isort --check-only ."

# run tests with coverage for the package
test = "pytest -q --cov=nsfc_final_report --cov-report=term-missing"

# convenience task for CI: venv -> install -> lint -> test
ci = "uv venv .venv && uv install && uv lint && uv test"

# format code (in-place)
format = "ruff format . && isort . && black ."

# build and optionally upload package; to upload set UPLOAD=true and provide TWINE_USERNAME/TWINE_PASSWORD
publish = "python -m pip install --upgrade pip && python -m pip install build twine && python -m build && if [ \"${UPLOAD:-}\" = \"true\" ]; then twine upload dist/*; else echo 'Build complete. To upload set UPLOAD=true and provide TWINE_USERNAME/TWINE_PASSWORD (or use CI secrets)'; fi"

[tool.setuptools.packages.find]
where = ["."]
include = ["nsfc_final_report*"]
